Update 'go-ibifjwwa' component image to: quay.io/rhtap_qe/go-ibifjwwa:cca4cc821484dcc926940c0a5c79c36b64a3eb1c@sha256:88512d2b949c3841f5768a600c0de42f3de15702e5b9d3d2e520052ba1927a21

--- a/components/go-ibifjwwa/overlays/development/deployment-patch.yaml
+++ b/components/go-ibifjwwa/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-ibifjwwa
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-ibifjwwa:cca4cc821484dcc926940c0a5c79c36b64a3eb1c@sha256:88512d2b949c3841f5768a600c0de42f3de15702e5b9d3d2e520052ba1927a21
+          name: container-image
